--- a/app/views/shop/edit.html
+++ b/app/views/shop/edit.html
@@ -1,10 +1,21 @@
 <div class="form-group">
+    <label class="col-lg-2 control-label">手机号码</label>
+    <div class="col-lg-6">
+        <div class="input-group">
+            <input class="form-control" name="telephone" type="text" ng-model="entity.telephone" ng-pattern="/^(1(([35][0-9])|(47)|[8][01236789]))\d{8}$/">
+            <span class="input-group-addon"><i class="fa fa-circle-o"></i></span>
+        </div>
+    </div>
+    <div class="col-lg-4" ng-if="editForm.$error.pattern">
+        <span class="label label-warning">手机号码格式不正确！</span>
+    </div>
+</div>
+<div class="form-group">
 	<label class="col-lg-2 control-label">状态</label>
 	<div class="col-lg-10">
 		<div class="btn-group">
       <button type="button" class="btn btn-success" ng-model="entity.status" btn-radio="'open'">营业</button>
       <button type="button" class="btn btn-warning" ng-model="entity.status" btn-radio="'closed'">停业</button>
-			<i class="fa fa-circle" />
 		</div>
 	</div>
 </div>
