Update: CRM => RMS

--- a/app/views/main.html
+++ b/app/views/main.html
@@ -51,7 +51,7 @@
     <footer>
       <p>
         <span style="text-align:left;float:left">
-          &copy; 2013 <a href="http://fankahui.com" alt="泛商汇CRM">泛商汇CRM</a>
+          &copy; 2013 <a href="http://fankahui.com" alt="泛商汇RMS">泛商汇RMS</a>
         </span>
         <span class="hidden-phone" style="text-align:right;float:right">
           Powered by: <a href="http://fankahui.com" alt="泛盈科技">泛盈科技</a>
