--- a/app/views/basicList.html
+++ b/app/views/basicList.html
@@ -11,6 +11,11 @@
         <div class="col-xs-6"></div>
         <div class="col-xs-2">
             <div class="box-icon">
+                <!--START:operator for deletes-->
+                    <a href="" ng-click="showCheckbox()" title="批量删除">
+                        <i class="fa fa-trash-o"></i>
+                    </a>
+                <!--END:operator for deletes-->
                 <a ng-click="showCreate()" class="btn-puls" ng-hide="isHide"><i class="fa fa-plus" /></a>
                 <a ng-click="refreshList()" class="btn-refresh"><i class="fa fa-refresh" /></a>
             </div>
@@ -20,13 +25,6 @@
 </div>
 <div class="box-content">
     <div class="row">
-        <!--START:operator for deletes-->
-        <div class="col-lg-1">
-            <a href="" ng-click="showCheckbox()" class="btn btn-success" title="批量删除">
-                <i class="fa fa-trash-o">批量删除</i>
-            </a>
-        </div>
-        <!--END:operator for deletes-->
         <!--START:operator for switch page's length-->
         <div class="col-lg-3">
             <div class="row">
@@ -53,7 +51,7 @@
             </div>
         </div>
         <!--END:operator for switch shops-->
-        <div class="col-lg-2"></div>
+        <div class="col-lg-3"></div>
         <!--START: operator for search-->
         <div class="col-lg-3">
             <form class="form-search" >
