--- a/app/views/analysis/salesAnalysis.html
+++ b/app/views/analysis/salesAnalysis.html
@@ -12,13 +12,13 @@
                 <div class="row col-lg-12">
                     <div class="col-lg-3" style="text-align: center;">
                         <div class="btn-group">
-                            <button ng-disabled="analysisModel == 'merchant'" ng-click="lvlMove('e20dccdf039b3874')" type="button" class="btn btn-primary" ng-model="analysisModel" btn-radio="'merchant'">
+                            <button ng-disabled="analysisModel == 'merchant'" ng-click="lvlMove(currentMerchant.id, 'merchant')" type="button" class="btn btn-primary" ng-model="analysisModel" btn-radio="'merchant'">
                                 <i ng-class="views[3].icon"></i> 商户
                             </button>
-                            <button ng-disabled="analysisModel == 'shop'" ng-click="lvlMove(currentShop.id)" ng-show="!(analysisModel == 'merchant') && !(analysisModel == 'shopItem')" type="button" class="btn btn-primary" ng-model="analysisModel" btn-radio="'shop'">
+                            <button ng-disabled="analysisModel == 'shop'" ng-click="lvlMove(currentShop.id, 'shop')" ng-show="!(analysisModel == 'merchant') && !(analysisModel == 'shopItem')" type="button" class="btn btn-primary" ng-model="analysisModel" btn-radio="'shop'">
                                 <i ng-class="views[4].icon"></i> {{currentShop.name}}
                             </button>
-                            <button ng-disabled="analysisModel == 'shopItem'" ng-click="lvlMove(currentShop.id)" ng-show="analysisModel == 'shopItem'" type="button" class="btn btn-primary" ng-model="analysisModel" btn-radio="'shopItem'">
+                            <button ng-disabled="analysisModel == 'shopItem'" ng-click="lvlMove(currentShop.id, 'shopItem')" ng-show="analysisModel == 'shopItem'" type="button" class="btn btn-primary" ng-model="analysisModel" btn-radio="'shopItem'">
                                 <i ng-class="views[4].icon"></i> {{currentShop.name}}
                             </button>
                             <button ng-disabled="analysisModel == 'employee'" ng-show="analysisModel == 'employee'" type="button" class="btn btn-primary" ng-model="analysisModel" btn-radio="'employee'">
