close #152, 销售统计默认显示所有商店

--- a/app/views/analysis/salesAnalysis.html
+++ b/app/views/analysis/salesAnalysis.html
@@ -71,7 +71,7 @@
                                 </select>
                             </div>
                             <div class="col-lg-6" >
-                                <button style="margin-right: 0px" ng-show="analysisModel == 'merchant'" type="button" class="btn btn-primary"
+                                <button id="showAll" style="margin-right: 0px" ng-show="analysisModel == 'merchant'" type="button" class="btn btn-primary"
                                         ng-model="shopsDiv" btn-checkbox btn-checkbox-true="true"
                                         btn-checkbox-false="false">
                                     所有商店
