fix : 修改商户管理 close #146

--- a/app/views/header.html
+++ b/app/views/header.html
@@ -24,7 +24,7 @@
 						<li><a ng-click="showMeProfile()"><i class="fa fa-user"></i> 个人资料 </a></li>
                         <li><a ng-click="showUserSettingDialog()"><i class="fa fa-cog"></i> 用户设定</a></li>
 						<li><a ng-click="showChangePasswordDialog()"><i class="fa fa-cog"></i> 修改密码</a></li>
-						<li><a ng-click="signout()"><i class="fa fa-off"></i> 登出 </a></li>
+						<li><a ng-click="signout()"><i class="fa fa-sign-out"></i> 登出 </a></li>
 					</ul>
 				</li>
 				<!-- end: User Dropdown -->
