--- a/app/views/merchant/index.html
+++ b/app/views/merchant/index.html
@@ -1,4 +1,4 @@
-<div class="row" ng-controller="MerchantsController" ng-init="init()">
+<div class="row" ng-controller="MerchantsController">
   <div class="box col-lg-12">
     <div ng-include="activeView" />
   </div>
