--- a/app/views/home.html
+++ b/app/views/home.html
@@ -2,7 +2,7 @@
     <div class="row">
         <div class="row">
             <div class="page-header" >
-                <h1 class="text-center text-primary"  >泛商汇RMS - 零售管理系统</h1>
+                <h1 class="text-center text-primary"><img src="img/logo.png" alt="泛商汇RMS">  <small>零售管理系统</small></h1>
             </div>
 
             <script type="text/ng-template" id="myModalContent.html">
