--- a/app/views/header.html
+++ b/app/views/header.html
@@ -5,8 +5,8 @@
 		      <span class="fa fa-bar"></span>
 		      <span class="fa fa-bar"></span>
 		</button>
-		<a class="hidden-xs open"><i class="fa fa fa-bars"></i></a>		
-		<a class="navbar-brand col-lg-2 col-sm-1 col-xs-12" href="#!/crm"><span><img src="img/logo.png" alt="泛商汇RMS"></span></a>
+		<a id="main-menu-toggle" class="hidden-xs open"><i class="fa fa fa-bars"></i></a>		
+		<a class="navbar-brand col-lg-2 col-sm-1 col-xs-12" href="#!/crm"><img src="img/logo.png"></a>
 		<!-- start: Header Menu -->
 		<div class="nav-no-collapse header-nav">
 			<ul class="nav navbar-nav pull-right">
