Fixed：主菜单折叠

--- a/app/views/header.html
+++ b/app/views/header.html
@@ -5,7 +5,7 @@
 		      <span class="fa fa-bar"></span>
 		      <span class="fa fa-bar"></span>
 		</button>
-		<a id="main-menu-toggle" class="hidden-xs open"><i class="fa fa fa-bars"></i></a>		
+		<a id="main-menu-toggle" class="hidden-xs open" ng-click="switchMainMenu()"><i class="fa fa fa-bars"></i></a>		
 		<a class="navbar-brand col-lg-2 col-sm-1 col-xs-12" href="#!/crm"><img src="img/logo.png"></a>
 		<!-- start: Header Menu -->
 		<div class="nav-no-collapse header-nav">
