--- a/app/views/main.html
+++ b/app/views/main.html
@@ -7,7 +7,7 @@
     <!-- start: Main Menu && Content-->
     <div class="row">
       <!-- start: Main Menu -->
-      <div id="sidebar-left" class="col-lg-2 col-sm-1">
+      <div id="sidebar-left" class="col-lg-2 col-sm-1" ng-hide="hideMainMenu">
         <div class="nav-collapse sidebar-nav collapse navbar-collapse bs-navbar-collapse">
           <ul class="nav nav-tabs nav-stacked main-menu">
             <li ng-repeat="view in views" ng-class="{active:view == currentView && !view.submenus}">
@@ -39,7 +39,7 @@
 
 
       <!-- start: Content -->
-      <div id="content" class="col-lg-10 col-sm-11">
+      <div id="content" class="col-lg-10 col-sm-11" ng-class="hideMainMenu? 'full': ''">
         <div ng-include="currentView.path" />
       </div>
       <!-- end: Content -->
