--- a/app/views/basicList.html
+++ b/app/views/basicList.html
@@ -2,9 +2,9 @@
     <div class="row">
         <div class="col-xs-4">
             <ol class="breadcrumb" style="background-color: #36a9e1; margin: 0px; padding: 0px; padding-left: 0px; margin-bottom: 0px; margin-top: 8px; margin-left: 15px;" >
-                <li ng-if="viewName"><a style="color: #fff">{{viewName}}</a></li>
-                <li ng-if="viewName == currentView.name"><a style="color: #fff">{{currentView.submenus[0].name}}</a></li>
-                <li ng-if="viewName != currentView.name"><a style="color: #fff">{{currentView.name}}</a></li>
+                <li ng-if="currentView.name == '销售流水' || currentView.name == '退货流水' || currentView.name == '储值流水'"><a style="color: #fff">营业流水</a></li>
+                <li ng-if="currentView.name != '销售流水' && currentView.name != '退货流水' && currentView.name != '储值流水' && currentView.name != '设备管理' "><a style="color: #fff">商户管理</a></li>
+                <li><a style="color: #fff">{{currentView.name}}</a></li>
             </ol>
             <!--<h2><i ng-class="currentView.icon"></i><span class="break"></span>{{currentView.name}}</h2>-->
         </div>
@@ -140,6 +140,13 @@
             显示 {{pagination.iStart}} ~ {{pagination.iEnd}} / {{pagination.iTotal}} 条
         </div>
         <div class="col-lg-12 center">
+            <!--START:temp css for pagination-->
+            <style>
+                div.col-lg-12 ul>li {
+                    cursor:pointer;
+                }
+            </style>
+            <!--START:temp css for pagination-->
             <pagination total-items="pagination.iTotal" items-per-page="pagination.iLength" page="pagination.iPage" max-size="pagination.maxSize"  rotate="false" previous-text="上一页" next-text="下一页"></pagination>
         </div>
     </div>
