--- a/app/views/main.html
+++ b/app/views/main.html
@@ -11,7 +11,7 @@
         <div class="nav-collapse sidebar-nav collapse navbar-collapse bs-navbar-collapse">
           <ul class="nav nav-tabs nav-stacked main-menu">
             <li ng-repeat="view in views" ng-class="{active:view == currentView && !view.submenus}">
-              <a href="" ng-click="selectView(view)" ng-class="{dropmenu:view.submenus.length > 0}">
+              <a ng-click="selectView(view)" data-toggle="collapse" data-target="#collapse{{$index}}" data-parent="#sidebar-left" href="" ng-class="{dropmenu:view.submenus.length > 0}">
                   <div class="row">
                       <div class="col-lg-10">
                           <i class={{view.icon}}></i>
@@ -23,14 +23,21 @@
                   </div>
 
               </a>
-              <ul ng-show="view.submenus.length && (view == currentView || -1 < view.submenus.indexOf(currentView))" style="margin-left:10px;display: block">
-                <li ng-repeat="subview in view.submenus" ng-class="{active:subview == currentView}">
-                  <a class="submenu" href ng-click="selectView(subview)">
-                    <i class={{subview.icon}}></i>
-                    <span class="hidden-tablet"> {{subview.name}}</span>
+              <div id="collapse{{$index}}" class="collapse" style="margin: 0px; padding: 0px">
+              <ul style="margin-left:10px;display: block;list-style-type: none ">
+                <li ng-repeat="subview in view.submenus" ng-class="{active:subview == currentView}" style="margin: 15px 0px">
+                  <a class="submenu" href ng-click="selectView(subview)" style="color:#fff; ">
+                      <div class="row">
+                          <div class="col-lg-1"><i class={{subview.icon}}></i>
+                          </div>
+                          <div class="col-lg-3"><span class="hidden-tablet"> {{subview.name}}</span>
+                          </div>
+                          <div class="col-lg-8"></div>
+                      </div>
                   </a>
                 </li>
               </ul>
+              </div>
             </li>
           </ul>
         </div>
