fix : 崭文对界面优化的建议 close #158

--- a/app/views/main.html
+++ b/app/views/main.html
@@ -55,7 +55,7 @@
     
     <div class="clearfix"></div>
 
-    <footer>
+    <footer class="navbar-fixed-bottom">
       <p>
         <span style="text-align:left;float:left">
           &copy; 2013 <a href="http://fankahui.com" alt="泛商汇RMS">泛商汇RMS</a>
