--- a/app/views/basicList.html
+++ b/app/views/basicList.html
@@ -68,7 +68,7 @@
 
     <!--just for generate margin between the operator column and table-->
     <div class="row" style="height: 10px"></div>
-
+    <div style="overflow-x: auto; overflow-y: auto; height:550px;">
     <!--START: table for showing datas-->
     <table class="table table-striped table-bordered bootstrap-datatable datatable table-hover">
         <thead>
@@ -133,7 +133,7 @@
         </tbody>
     </table>
     <!--END: table for showing datas-->
-
+    </div>
     <!--START: pagination-->
     <div class="row">
         <div class="col-lg-12">
