--- a/app/views/analysis/skusAnalysis.html
+++ b/app/views/analysis/skusAnalysis.html
@@ -12,10 +12,10 @@
                 <div class="row">
                     <div class="col-lg-3" style="text-align: center">
                         <div class="btn-group">
-                            <button ng-disabled="analysisModel == 'merchant'" ng-click="lvlMove('e20dccdf039b3874')" type="button" class="btn btn-primary" ng-model="analysisModel" btn-radio="'merchant'">
+                            <button ng-disabled="analysisModel == 'merchant'" ng-click="lvlMove(currentMerchant.merchant.id, 'merchant')" type="button" class="btn btn-primary" ng-model="analysisModel" btn-radio="'merchant'">
                                 <i ng-class="views[3].icon"></i> 商户
                             </button>
-                            <button ng-disabled="analysisModel == 'shop'" ng-click="lvlMove(currentShop.id)" ng-show="!(analysisModel == 'merchant') && !(analysisModel == 'shopItem')" type="button" class="btn btn-primary" ng-model="analysisModel" btn-radio="'shop'">
+                            <button ng-disabled="analysisModel == 'shop'" ng-click="lvlMove(currentShop.id, 'shop')" ng-show="!(analysisModel == 'merchant') && !(analysisModel == 'shopItem')" type="button" class="btn btn-primary" ng-model="analysisModel" btn-radio="'shop'">
                                 <i ng-class="views[4].icon"></i> {{currentShop.name}}
                             </button>
                             <button ng-disabled="analysisModel == 'shopItem'" ng-click="lvlMove(currentShop.id)" ng-show="analysisModel == 'shopItem'" type="button" class="btn btn-primary" ng-model="analysisModel" btn-radio="'shopItem'">
@@ -75,7 +75,7 @@
                                         btn-checkbox-false="false">
                                     所有商店
                                 </button>
-                                <button style="margin-right: 0px" ng-show="analysisModel == 'shop'" type="button" class="btn btn-primary"
+                                <button style="margin-right: 0px" ng-show="" type="button" class="btn btn-primary"
                                         ng-model="shopsDiv" btn-checkbox btn-checkbox-true="true"
                                         btn-checkbox-false="false">
                                     所有员工
@@ -130,7 +130,8 @@
                         <table class="table table-striped table-bordered bootstrap-datatable datatable">
                             <tbody >
                             <tr ng-repeat="tbRow in tbRows|orderBy:columnSort.sortColumn:columnSort.reverse">
-                                <td style="width: 20%"><a href="" ng-click="lvlMove(tbRow)">{{tbRow.name}}</a></td>
+                                <td ng-show="analysisModel == 'merchant'" style="width: 20%"><a href="" ng-click="lvlMove(tbRow)">{{tbRow.name}}</a></td>
+                                <td ng-show="analysisModel == 'shop'" style="width: 20%">{{tbRow.name}}</a></td>
                                 <td style="width: 20%">{{tbRow.sale}}</td>
                                 <td style="width: 20%">{{tbRow.percentage}}%</td>
                                 <td style="width: 20%">N/A</td>
