优化UI，去除box的不和谐边框

--- a/app/views/main.html
+++ b/app/views/main.html
@@ -47,7 +47,7 @@
 
       <!-- start: Content -->
       <div id="content" class="col-lg-10 col-sm-11" ng-class="hideMainMenu? 'full': ''">
-        <div ng-include="currentView.path" />
+        <div style="padding-left: 5px; padding-right: 5px" ng-include="currentView.path" />
       </div>
       <!-- end: Content -->
     </div>
