--- a/app/views/analysis/skusAnalysis.html
+++ b/app/views/analysis/skusAnalysis.html
@@ -1,5 +1,5 @@
 <div class="row" ng-controller="SkusAnalysisController" ng-init="init()">
-    <div class="row" style="padding-left: 20px; padding-right: 20px">
+    <div class="row" style="padding-left: 15px; padding-right: 15px">
         <div class="box">
             <div class="box-header">
                 <h2>
@@ -91,8 +91,13 @@
                 </div>
                 <div style="text-align: center" class="alert alert-info" ng-show="!showPrimaryChart && !noData" close="closeAlert()">正在载入您的进货数据</div>
                 <div style="text-align: center" class="alert alert-danger" ng-show="noData" close="closeAlert()">抱歉，您在此时间段内没有任何进货数据</div>
+
                 <div class="row">
-                    <div ng-class="col-lg-12" ng-show="showPrimaryChart" style="text-align: right">
+                    <div class="col-lg-4" style="text-align: right" ng-show="dualChart">
+                        <div google-chart="" chart="offChart" style="{{offChart.cssStyle}}"
+                             on-ready="chartReady()"></div>
+                    </div>
+                    <div ng-class="primaryChartFull" ng-show="showPrimaryChart" style="text-align: right">
                         <div google-chart="" chart="primaryChart" style="{{primaryChart.cssStyle}}"
                              on-ready="chartReady()"></div>
                     </div>
