--- a/app/views/basicList.html
+++ b/app/views/basicList.html
@@ -1,3 +1,4 @@
+<div class="box" style="margin-left: -15px; margin-right: -15px">
 <div class="box-header">
     <div class="row">
         <div class="col-xs-4">
@@ -153,3 +154,4 @@
     <!--END: pagination-->
 </div>
 </div>
+        </div>
