--- a/app/views/basicEditForSkus.html
+++ b/app/views/basicEditForSkus.html
@@ -37,6 +37,29 @@
                     <input  class="form-control" type="text" ng-change="getInfo(entity.itemCode)"  ng-model="entity.itemCode" ng-required="!!field.required">
                 </div>
             </div>
+            <div ng-if="isNewItem" style="margin-left: 50px">
+                <div class="alert alert-warning">
+                    该商品为新货，请先填写该商品的有关信息
+                </div>
+                <div class="form-group"  >
+                    <label class="col-lg-2 control-label">商品售价：</label>
+                    <div class="col-lg-6">
+                        <input  class="form-control" type="text" ng-model="item.itemPrice" required>
+                    </div>
+                </div>
+                <div class="form-group"  >
+                    <label class="col-lg-2 control-label">商品描述：</label>
+                    <div class="col-lg-6">
+                        <input  class="form-control" type="text" ng-model="item.itemDesc" required>
+                    </div>
+                </div>
+                <div class="form-group"  >
+                    <label class="col-lg-2 control-label">商品型号：</label>
+                    <div class="col-lg-6">
+                        <input  class="form-control" type="text" ng-model="item.itemModel" required>
+                    </div>
+                </div>
+            </div>
             <div class="form-group"  >
                 <label class="col-lg-2 control-label">商品名称：</label>
 
@@ -51,7 +74,7 @@
                 </div>
             </div>
             <div class="form-group"  >
-                <label class="col-lg-2 control-label">商品单价：</label>
+                <label class="col-lg-2 control-label">商品进价：</label>
                 <div class="col-lg-6">
                     <input  class="form-control" type="text" ng-model="entity.price" ng-required="!!field.required">
                 </div>
@@ -68,7 +91,7 @@
         <hr>
         <div class="form-group">
             <div class="col-lg-offset-2 col-lg-6">
-                <button ng-disabled="editForm.$error.required" ng-click="create(entity)" class="btn btn-primary btn-lg"
+                <button ng-disabled="editForm.$error.required" ng-click="create()" class="btn btn-primary btn-lg"
                         ng-if="!entity.id"><i class="fa fa-plus fa-lg"></i> 创建
                 </button>
                 <button ng-disabled="editForm.$invalid" ng-click="update(entity)" class="btn btn-primary btn-lg"
