revise skus/profile

--- a/app/views/skus/profile.html
+++ b/app/views/skus/profile.html
@@ -1,7 +1,6 @@
 <div class="box-header">
     <h2><i ng-class="currentView.icon"></i><span class="break"></span>
-        <span ng-show='!entity.id'>新增{{currentView.name}}</span>
-        <span ng-show='!!entity.id'>编辑{{currentView.name}}</span>
+        <span ng-show='!entity.id'>进货与核销</span>
     </h2>
     <div class="box-icon">
         <a ng-click="cancelEdit()" class="btn-close"><i class="fa fa-times"></i></a>
