--- a/app/views/item/edit.html
+++ b/app/views/item/edit.html
@@ -2,9 +2,9 @@
     <label class="col-lg-2 control-label">状态</label>
     <div class="col-lg-10">
         <div class="btn-group">
-            <button type="button" class="btn btn-success" ng-model="entity.status" btn-radio="'sale'">正常</button>
+            <button type="button" class="btn btn-success" ng-model="entity.status" btn-radio="'sale'">上架</button>
             <button type="button" class="btn btn-warning" ng-model="entity.status" btn-radio="'removed'">下架</button>
-            <i class="fa fa-circle" />
+           
         </div>
     </div>
 </div>
