--- a/app/views/main.html
+++ b/app/views/main.html
@@ -61,11 +61,20 @@
           &copy; 2014 泛盈科技
         </span>
         <span class="hidden-phone" style="color:#cccccc;text-align:right;float:right">
-          <a href="http://extensivepro.com" alt="技术支持">技术支持</a> | <a href="http://fankahui.com" alt="常见问题">常见问题</a> | <a href="http://wpa.qq.com/msgrd?v=3&amp;uin=2339672843&amp;site=qq&amp;menu=yes" alt="联系我们">联系我们</a>
+          <a ng-click="showTwoDimensionalCode()" alt="关注微信">关注微信</a>
+           | <a href="http://wpa.qq.com/msgrd?v=3&amp;uin=2339672843&amp;site=qq&amp;menu=yes" alt="联系我们">联系我们</a>
+           | <a href="http://fankahui.com" alt="常见问题">常见问题</a>
+           | <a href="http://extensivepro.com" alt="技术支持">技术支持</a>
         </span>
       </p>
     </footer>
     
   </div><!--/.fluid-container-->
 </div>
+
+<!-- Start: Weixin Two-dimensional code -->
+<script type="text/ng-template" id="TwoDimensionalCode.html">
+          	<img data-original="http://fankahui.oss-cn-hangzhou.aliyuncs.com/qr-wechat-kefu.jpg" src="http://fankahui.oss-cn-hangzhou.aliyuncs.com/qr-wechat-kefu.jpg" style="display: block;clear: both;margin:auto">
+</script>
+<!-- End: Weixin Two-dimensional code -->
 
