--- a/app/views/merchant/edit.html
+++ b/app/views/merchant/edit.html
@@ -1,6 +1,6 @@
 <div class="box-header">
     <h2><i ng-class="currentView.icon"></i><span class="break"></span>
-        <span ng-show='!!entity.id'>编辑{{currentView.name}}</span>
+        <span ng-show='!!entity.id'>设置 - {{currentMerchant.merchant.name}}</span>
     </h2>
     <div class="box-icon">
         <a ng-click="cancelEdit()" class="btn-close"><i class="fa fa-times"></i></a>
