--- a/app/views/merchantProfile.html
+++ b/app/views/merchantProfile.html
@@ -1,23 +1,31 @@
 <div class="box-header">
-    <h2><i ng-class="currentView.icon"></i><span class="break"></span>商户管理 - 详情</h2>
+     <h2>
+       <div>
+            <ol class="breadcrumb" style="background-color: #36a9e1; margin: 0px; padding: 0px; padding-left: 0px; margin-bottom: 0px;" >
+                <li><a style="color: #fff">商户管理</a></li>
+                <li><a style="color: #fff">{{currentView.name}}</a></li>
+            </ol>
+       </div>
+     </h2>
 </div>
 <div class="box-content">
-    <div class="row">
-        <div class="col-lg-2"></div>
-        <div class="col-lg-1">
-            <h4>当前商户</h4>
-        </div>
-        <div class="col-lg-2">
-            <select class="form-control" ng-model="currentMerchant.merchant" ng-options="option as option.name for option in allMerchant">
-                <option value="">-- 选择商户 --</option>
-            </select>
-        </div>
-        <div class="col-lg-4"></div>
-        <div class="col-lg-1">
-            <a class="btn btn-primary" ng-click="editMerchant(currentMerchant.merchant)"><i class="fa fa-edit fa-lg"></i> 编辑</a>
-        </div>
-        <div class="col-lg-2"></div>
-    </div>
+  	<div class="col-lg-12">
+  		<a ng-repeat="shortcut in profileShortcuts" ng-class="shortcut.class" ng-click="editMerchant(currentMerchant.merchant)">
+  			<i ng-class="shortcut.icon" />
+  			<p>{{shortcut.text}}</p>
+  		</a>
+      <div class="row">
+          <div class="col-lg-2"></div>
+          <div class="col-lg-1" style="position: relative; top: 30px">
+              <h4>当前商户</h4>
+          </div>
+          <div class="col-lg-2" style="position: relative; top: 30px">
+              <select class="form-control" ng-model="currentMerchant.merchant" ng-options="option as option.name for option in allMerchant">
+                  <option value="">-- 选择商户 --</option>
+              </select>
+          </div>
+      </div>
+  	</div>
     <div class="row" style="height: 30px"></div>
     <div class="row">
         <div class="col-lg-1"></div>
@@ -43,4 +51,3 @@
     </div>
     <div class="clearfix"></div>
 </div>
-
