--- a/app/views/basicList.html
+++ b/app/views/basicList.html
@@ -83,7 +83,7 @@
                 </div>
             </th>
             <th ng-repeat="field in fields" ng-show="!field.listHide">
-                {{field.title}}
+                {{field.title}} <a href="" ng-click="sortByMoney(-flag)"><i style="padding: 2px" class="{{field.sort}}"></i></a>
             </th>
         </tr>
         </thead>
