--- a/app/views/basicList.html
+++ b/app/views/basicList.html
@@ -69,24 +69,32 @@
 
     <!--just for generate margin between the operator column and table-->
     <div class="row" style="height: 10px"></div>
-    <div style="overflow-x: auto; overflow-y: auto; height:550px;">
-    <!--START: table for showing datas-->
-    <table class="table table-striped table-bordered bootstrap-datatable datatable table-hover">
+    <div>
+        <table class="table table-striped table-bordered bootstrap-datatable datatable table-hover" style="margin-bottom:-7px!important;width: 100%">
         <thead>
         <tr>
-            <th ng-show="showCbx">
-                <div class="row">
-                    <div class="col-lg-12">
-                    <input type="checkbox" ng-model="checked" title="全选">&nbsp;&nbsp;&nbsp;
-                    <button ng-click="deleteByIds()" class="btn btn-default btn-success" style="margin: 0px; padding: 0px">删除</button>
-                    </div>
-                </div>
+            <th ng-show="showCbx" style="width: {{percent/3}}%">
+                        <input type="checkbox" ng-model="checked" title="全选">&nbsp;&nbsp;&nbsp;
+                        <button ng-click="deleteByIds()" class="btn btn-default btn-success" style="margin: 0px; padding: 0px">删除</button>
             </th>
-            <th ng-repeat="field in fields" ng-show="!field.listHide">
+            <th ng-repeat="field in fields" ng-show="!field.listHide"  style="width: {{percent}}%">
                 {{field.title}} <a href="" ng-click="sortByMoney(-flag)"><i style="padding: 2px" class="{{field.sort}}"></i></a>
             </th>
         </tr>
         </thead>
+        </table>
+    </div>
+    <!--START:temp css for scroll bar-->
+    <style>
+        ::-webkit-scrollbar {
+            width: 0px;
+        }
+    </style>
+    <!--END: temp css for scroll bar-->
+    <div style="overflow-x: auto; overflow-y: auto; height:550px;">
+    <!--START: table for showing datas-->
+    <table class="table table-striped table-bordered bootstrap-datatable datatable table-hover" style="width: 100%">
+
         <tbody>
             <!--START: modal for operation-->
             <div>
@@ -122,10 +130,10 @@
             <!--START: list all datas for table-->
             <tr class="tr" style="cursor: pointer; height: 50px" ng-click="showProfile(entity)"
                 ng-repeat="entity in entities | limitTo: pagination.iLength">
-                <td ng-show="showCbx" ng-click="doNothing($event)" style="vertical-align: middle; width: 80px">
+                <td ng-show="showCbx" ng-click="doNothing($event)" style="vertical-align: middle; width:{{percent/3}}%">
                     <input type="checkbox" ng-model="none" name="chbox" value="{{entity.id}}" ng-checked="checked">
                 </td>
-                <td class="center" ng-repeat="field in fields" ng-show="!field.listHide" style="vertical-align: middle">
+                <td class="center" ng-repeat="field in fields" ng-show="!field.listHide" style="vertical-align: middle;width: {{percent}}%">
                     <span ng-class="entity.fieldClass[field.name]" ng-if="field.value">{{field.value(entity)}}</span>
                     <span ng-class="entity.fieldClass[field.name]" ng-if="!field.value">{{valueOfKeyString(entity, field.name)}}</span>
                 </td>
