--- a/app/views/members/edit.html
+++ b/app/views/members/edit.html
@@ -30,7 +30,7 @@
             <span class="input-group-addon"><i class="fa fa-circle-o"></i></span>
         </div>
     </div>
-    <div class="col-lg-4" ng-if="editForm.email.$error.email">
+    <div class="col-lg-4" ng-if="editForm.email.$error.pattern">
         <span class="label label-warning">邮箱格式不正确！</span>
     </div>
 </div>
