--- a/app/views/employee/edit.html
+++ b/app/views/employee/edit.html
@@ -1,4 +1,40 @@
 <div class="form-group">
+    <label class="col-lg-2 control-label">身份证号码</label>
+    <div class="col-lg-6">
+        <div class="input-group">
+            <input class="form-control" name="idcard" type="text" ng-model="entity.idcard" ng-pattern="patternForIdcard">
+            <span class="input-group-addon"><i class="fa fa-circle"></i></span>
+        </div>
+    </div>
+    <div class="col-lg-4" ng-if="editForm.idcard.$error.pattern">
+        <span class="label label-warning">身份证号码格式不正确！</span>
+    </div>
+</div>
+<div class="form-group">
+    <label class="col-lg-2 control-label">手机号码</label>
+    <div class="col-lg-6">
+        <div class="input-group">
+            <input class="form-control" name="phone" type="text" ng-model="entity.phone" ng-pattern="patternForTelephone">
+            <span class="input-group-addon"><i class="fa fa-circle"></i></span>
+        </div>
+    </div>
+    <div class="col-lg-4" ng-if="editForm.phone.$error.pattern">
+        <span class="label label-warning">手机号码格式不正确！</span>
+    </div>
+</div>
+<div class="form-group">
+    <label class="col-lg-2 control-label">邮箱</label>
+    <div class="col-lg-6">
+        <div class="input-group">
+            <input class="form-control" name="email" type="email" ng-model="entity.email">
+            <span class="input-group-addon"><i class="fa fa-circle-o"></i></span>
+        </div>
+    </div>
+    <div class="col-lg-4" ng-if="editForm.email.$error.email">
+        <span class="label label-warning">邮箱格式不正确！</span>
+    </div>
+</div>
+<div class="form-group">
     <label class="col-lg-2 control-label">状态</label>
     <div class="col-lg-10">
         <div class="btn-group">
