--- a/app/views/shop/edit.html
+++ b/app/views/shop/edit.html
@@ -1,15 +1,17 @@
 <div class="form-group">
-    <label class="col-lg-2 control-label">手机号码</label>
+    <label class="col-lg-2 control-label">电话号码</label>
     <div class="col-lg-6">
         <div class="input-group">
             <input class="form-control" name="telephone" type="text" ng-model="entity.telephone" ng-pattern="patternForTelephone">
-            <span class="input-group-addon"><i class="fa fa-circle-o"></i></span>
+            <span class="input-group-addon"><i class="fa fa-circle"></i></span>
         </div>
     </div>
     <div class="col-lg-4" ng-if="editForm.$error.pattern">
-        <span class="label label-warning">手机号码格式不正确！</span>
+        <span class="label label-warning">电话号码格式不正确！</span>
     </div>
 </div>
+
+
 <div class="form-group">
 	<label class="col-lg-2 control-label">状态</label>
 	<div class="col-lg-10">
