--- a/app/views/employee/edit.html
+++ b/app/views/employee/edit.html
@@ -1,5 +1,23 @@
 <div class="form-group">
-    <label class="col-lg-2 control-label">身份证号码</label>
+    <label class="col-lg-2 control-label">工号</label>
+    <div class="col-lg-6">
+        <div class="input-group">
+            <input class="form-control" name="jobNumber" type="text" ng-model="entity.jobNumber">
+            <span class="input-group-addon"><i class="fa fa-circle"></i></span>
+        </div>
+    </div>
+</div>
+<div class="form-group">
+    <label class="col-lg-2 control-label">姓名</label>
+    <div class="col-lg-6">
+        <div class="input-group">
+            <input class="form-control" name="name" type="text" ng-model="entity.name">
+            <span class="input-group-addon"><i class="fa fa-circle"></i></span>
+        </div>
+    </div>
+</div>
+<div class="form-group">
+    <label class="col-lg-2 control-label">身份证</label>
     <div class="col-lg-6">
         <div class="input-group">
             <input class="form-control" name="idcard" type="text" ng-model="entity.idcard" ng-pattern="patternForIdcard">
@@ -11,7 +29,7 @@
     </div>
 </div>
 <div class="form-group">
-    <label class="col-lg-2 control-label">手机号码</label>
+    <label class="col-lg-2 control-label">手机</label>
     <div class="col-lg-6">
         <div class="input-group">
             <input class="form-control" name="phone" type="text" ng-model="entity.phone" ng-pattern="patternForTelephone">
